@@ -34,7 +34,7 @@ downsampling = True
 # Set maximum number. If <1, only approximate grid-downsampling is performed
 downsample events = 2000
 # Fix selected axes plotting range
-fix plotting range = False
+fix range = False
 # Axes scaling
 scale x = linear # [log, linear]
 scale y = linear # [log, linear]
