@@ -174,7 +174,7 @@ class SubPanelPlotting(SubPanel):
                                   .replace("columns", "a1")
                                   .replace("rows", "a2")
                                   .replace("axis", "Aa")
-                                  .replace("fix plotting", "Ab"))
+                                  .replace("fix range", "scale a"))
         
         items.sort(key=sortfunc)
         
@@ -217,7 +217,7 @@ class SubPanelPlotting(SubPanel):
         for item in items:
             if (item[0].startswith("axis") or 
                 item[0].startswith("scale ") or
-                item[0] == "fix plotting range"):
+                item[0] == "fix range"):
                 stemp = self._create_type_wx_controls(analysis, key, item)
                 useditems.append(item)
                 axessizer.Add(stemp)
